chore - docker image works and is running in manual tests, configuration and data files are mounted when starting the image